Fri Jun  6 11:05:45 2003  Hidetoshi Tajima  <hidetoshi.tajima@sun.com>

	* modules/input/gtkimcontextxim.h (struct _GtkIMContextXIM):
	* modules/input/gtkimcontextxim.c (preedit_start_callback,
	preedit_draw_callback, preedit_done_callback): Add a 'finalizing' flag 
	to keep preedit-[start,changed,end] signals from being called during
	finalization (#111861).

2003-06-05  Noah Levitt  <nlevitt@columbia.edu>

	* gtk/gtknotebook.c (gtk_notebook_button_press): Ignore button
	presses that are not on the tab (#114534).

Thu Jun  5 20:35:40 2003  Owen Taylor  <otaylor@redhat.com>

	* demos/Makefile.am: Conditionalize deendencies for
	gdk-pixbuf-csource on cross-compilation (#112391, J. Ali Harlowe). 
	Buildtest-inline-pixbufs.h in srcdir. Don't try to build 
	test-inline-pixbufs.h if we don't have libpng.

	* gtk/stock-icons/Makefile.am (gtkstockpixbufs.h): 
	Add a dependency on gdk-pixbuf.loaders when not 
	cross-compiling, remove the dependency on gdk-pixbuf-csource
	when not cross compiling.

Thu Jun  5 20:12:51 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_get_default_size): Handle
	gtk_window_get_geometry_info() returning NULL.
	(#107311, John Finlay)

Thu Jun  5 19:24:33 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktoolbar.c (gtk_toolbar_expose): Subtract off
	twice the border width from the width/height, not
	1x the border width. (#106336, Rodney Dawes)

Thu Jun  5 15:33:38 2003  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_next_line):
 	If at the end of the buffer, move to the end iter -
 	parallels behavior of move_iter_to_previous_line.
 	(#81960, Padraig O'Briain)
 
Thu Jun  5 16:12:54 2003  Owen Taylor  <otaylor@redhat.com>

        #80023, Yao Zhang, TOKUNAGA Hiroyuki

	* gtk/gtktextlayout.c (gtk_text_layout_get_cursor_locations):
	Account for the preedit cursor offset if the iter passed
	in is at the same place as the insertion cursor.
